--- a/style.css
+++ b/style.css
@@ -7,3 +7,31 @@
  Author URI: www.winsloweric.cn
  Tags: MDUI
  */
+body{
+	margin:0px;
+	padding:0px;
+}
+#background-image-container{
+	position:fixed;
+	width:100%;
+	height:100%;
+	z-index:-128;
+	filter: blur(5px);
+	background-size:140% 140%;
+	background-image:url("https://cdn.winsloweric.cn/blog/background.png");
+}
+#background-image-container-transparent{
+	position:fixed;
+	width:100%;
+	height:100%;
+	z-index:-127;
+	background-color: rgba(255,255,255,0.2);
+}
+#header-container{
+	width:100%;
+	height:auto;
+	box-sizing:border-box;
+	margin:0px;
+	padding:2px;
+	position:fixed;
+}
