--- a/style.css
+++ b/style.css
@@ -7,31 +7,177 @@
  Author URI: www.winsloweric.cn
  Tags: MDUI
  */
-body{
-	margin:0px;
-	padding:0px;
+*{
+	text-decoration:none;
+	list-style: none;
+	font-weight: 300;
 }
-#background-image-container{
-	position:fixed;
-	width:100%;
-	height:100%;
-	z-index:-128;
+li{
+    padding:0;
+    margin:0;
+}
+body {
+	margin: 0px;
+	padding: 0px;
+	background-size: 100% 100%;
+	background-image: url("https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1593410115634&di=1f06e4111fbaf80f06eeecf8ca0b8910&imgtype=0&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F3e66e2997d6a5b469661bb73e0dbd439f60e8ac9.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+}
+html{
+	margin: 0px;
+	padding: 0px;
+}
+#background-image-container {
+	position: fixed;
+	width: 120%;
+	height: 120%;
+	z-index: -128;
 	filter: blur(5px);
-	background-size:140% 140%;
-	background-image:url("https://cdn.winsloweric.cn/blog/background.png");
+	background-size: 100% 100%;
+	background-image: url("https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1593410115634&di=1f06e4111fbaf80f06eeecf8ca0b8910&imgtype=0&src=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farticle%2F3e66e2997d6a5b469661bb73e0dbd439f60e8ac9.jpg");
 }
-#background-image-container-transparent{
-	position:fixed;
-	width:100%;
-	height:100%;
-	z-index:-127;
+#background-image-container-transparent {
+	position: fixed;
+	width: 120%;
+	height: 120%;
+	z-index: -127;
+	background-size: 100% 100%;
 	background-color: rgba(255,255,255,0.2);
 }
-#header-container{
-	width:100%;
-	height:auto;
-	box-sizing:border-box;
-	margin:0px;
-	padding:2px;
-	position:fixed;
+#header-container {
+	width: 100%;
+	height: 6%;
+	box-sizing: border-box;
+	margin: 0px;
+	padding: 2px;
+	position: fixed;
+	z-index: 128;
+	background-color: rgba(255,255,255,0.9);
 }
+.homelink{
+	display:inline;
+	font-weight: 300;
+	margin-left:3%;
+}
+#page-description{
+	display:inline-block;
+	font-weight: 200;
+}
+#articles-main-container{
+	position:absolute;
+	display:block;
+	margin:40px;
+	margin-top:5%;
+	margin-left:30%;
+	width:42%;
+	padding:1%;
+	height:auto;
+	background-color: rgba(255,255,255,0.8);
+}
+.articles-container{
+	width:96%;
+	height:auto;
+	margin:auto;
+	margin-top:2%;
+	margin-bottom:2%;
+	display:block;
+	padding:4px;
+	background-color: rgba(245,248,255,0.8);
+}
+.title-index{
+	font-weight:300px;
+	font-size:large;
+}
+#sidebar-container{
+	width:10%;
+	height:auto;
+	overflow:scroll;
+	box-sizing: border-box;
+	right:0px;
+	padding: 6px;
+	position:fixed;
+	display:block;
+	z-index: 128;
+	margin-top:10%;
+	background-color: rgba(255,255,255,0.8);
+}
+#music-player{
+	z-index:129;
+	position:fixed;
+	right:0px;
+	bottom:0px;
+	margin:0px;
+}
+#cat-item{
+	margin:1px;
+}
+#sidebar-subcontainer-1{
+	padding:0px;
+}
+#sidebar-subcontainer-2{
+	padding:0px;
+}
+#uo-container{
+	width:auto;
+	height:auto;
+	float:right;
+	display:inline;
+	margin-right:10%;
+}
+#navigator-container{
+	width:10%;
+	height:94%;
+	top:6%;
+	box-sizing: border-box;
+	left:0px;
+	padding: 8px;
+	position:absolute;
+	background-color: rgba(255,255,255,0.8);
+}
+#page-navigator-container{
+	margin:auto;
+	position:absolute;
+	
+}
+.pagebtn{
+	display:inline-block;
+	margin:1%;
+	z-index:135;
+}
+#footer-divider{
+	position:fixed;
+	bottom:1%;
+}
+#single-container{
+	
+}
+.title{
+	font-size:xx-large;
+	font-weight:400;
+}
+#main-article{
+	font-size:large;
+	font-weight:300;
+}
+#single-page-main-container{
+	box-sizing:border-box;
+	position:absolute;
+	width:48%;
+	z-index:130;
+	top:14%;
+	left:24%;
+}
+#single-page-article-container{
+	padding:24px;
+	width:100%;
+	background-color: rgba(255,255,255,0.5);
+}
+#comment-container{
+	padding:24px;
+	width:100%;
+	background-color: rgba(255,255,255,0.5);
+}
+
