--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ html{
 	box-sizing: border-box;
 	left:0px;
 	padding: 8px;
-	position:absolute;
+	position:fixed;
 	background-color: rgba(255,255,255,0.8);
 }
 #page-navigator-container{
@@ -179,5 +179,23 @@ html{
 	padding:24px;
 	width:100%;
 	background-color: rgba(255,255,255,0.5);
+}
+.comment-container{
+	width:60%;
+	padding:2px;
+	margin-top:1%;
+	margin-bottom:1%;
+	background-color: rgba(238,247,255,0.2);
+}
+.avatar-container{
+	border-radius:16px;
+}
+.media-left{
+	display:inline;
+}
+#author_name{
+	display:inline;
+	font-size:large;
+	font-weight:300;
 }
 
